fixed collapse component

--- a/src/app/components/AboutAiscAndHat/AboutAiscAndHat.module.scss
+++ b/src/app/components/AboutAiscAndHat/AboutAiscAndHat.module.scss
@@ -169,9 +169,10 @@
 		}
 	}
 
-	:global(.ant-collapse-content-active) {
-		color: var(--primary);
-		background: var(--light-bg);
+	:global(.ant-collapse-content-active),
+	:global(.ant-collapse-content) {
+		color: var(--primary) !important;
+		background: var(--light-bg) !important;
 	}
 
 	:global(.ant-collapse-expand-icon) {
